--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <ul class="team-icon-list">
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram-2"
                           class="team-icon-use"
@@ -157,7 +157,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-twitter-1"
                           class="team-icon-use"
@@ -167,7 +167,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook-1"
                           class="team-icon-use"
@@ -177,7 +177,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin-1"
                           class="team-icon-use"
@@ -196,7 +196,7 @@
                 <ul class="team-icon-list">
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram-2"
                           class="team-icon-use"
@@ -206,7 +206,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-twitter-1"
                           class="team-icon-use"
@@ -216,7 +216,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook-1"
                           class="team-icon-use"
@@ -226,7 +226,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin-1"
                           class="team-icon-use"
@@ -245,7 +245,7 @@
                 <ul class="team-icon-list">
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram-2"
                           class="team-icon-use"
@@ -255,7 +255,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-twitter-1"
                           class="team-icon-use"
@@ -265,7 +265,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook-1"
                           class="team-icon-use"
@@ -275,7 +275,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin-1"
                           class="team-icon-use"
@@ -294,7 +294,7 @@
                 <ul class="team-icon-list">
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram-2"
                           class="team-icon-use"
@@ -304,7 +304,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-twitter-1"
                           class="team-icon-use"
@@ -314,7 +314,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook-1"
                           class="team-icon-use"
@@ -324,7 +324,7 @@
                   </li>
                   <li class="team-icon-item link">
                     <a href="" class="team-icon">
-                      <svg class="team-icon-svg" width="20" height="16.25">
+                      <svg class="team-icon-svg" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin-1"
                           class="team-icon-use"
@@ -413,7 +413,7 @@
         </div>
         <div>
         <div class="footer-box-icon">
-          <h4 class="footer-icon-text">приєднуйтесь</h4>
+          <p class="footer-icon-text">приєднуйтесь</p>
           <ul class="footer-flex">
             <li class="footer-icon-item link">
               <a href="" class="footer-icon">
