--- a/portfolio.html
+++ b/portfolio.html
@@ -85,11 +85,13 @@
           <!--Проэкты-->
           <ul class="box-portfolio">
             <li class="box-cart">
+              <a href="" class="ddd">
               <img src="./images/technoquack.jpeg" alt="technoquack" width="370" />
               <div class="portfolio-box-text container">
                 <h2 class="header-portfolio">Технокряк</h2>
                 <p class="services-portfolio">Веб-сайт</p>
               </div>
+              </a>
             </li>
             <li class="box-cart">
               <img src="./images/poster.jpg" alt="poster" width="370" />
@@ -157,7 +159,7 @@
       <div class="container footer-box-flex">
         <div>
           <a href="#" lang="en" class="logo link"
-          >Web
+            >Web
             <span class="studio-logo-footer">Studio</span>
           </a>
 
@@ -177,7 +179,7 @@
         </div>
         <div>
           <div class="footer-box-icon">
-            <h4 class="footer-icon-text">приєднуйтесь</h4>
+            <p class="footer-icon-text">приєднуйтесь</p>
             <ul class="footer-flex">
               <li class="footer-icon-item link">
                 <a href="" class="footer-icon">
@@ -192,7 +194,10 @@
               <li class="footer-icon-item link">
                 <a href="" class="footer-icon">
                   <svg class="footer-icon-svg" width="20" height="16.25">
-                    <use href="./images/symbol-defs.svg#icon-twitter-1" class="footer-icon-use"></use>
+                    <use
+                      href="./images/symbol-defs.svg#icon-twitter-1"
+                      class="footer-icon-use"
+                    ></use>
                   </svg>
                 </a>
               </li>
@@ -221,5 +226,5 @@
         </div>
       </div>
     </footer>
-</body>
+  </body>
 </html>
